rust/geometry/tests/snapshots/annex_e__tess__polygonal-face.snap
---
source: rust/geometry/tests/geometry_correctness_harness.rs
description: tests/models/buildingsmart/annex_e/tessellated-shape/polygonal-face-tessellation.ifc
---
parse_ok: true
products_attempted: 2
products_non_empty: 1
process_errors: 1
total_triangles: 28
total_vertices: 48
spike_triangles: 0
total_surface_area: 3000.000
bbox_min: [-10.000, -10.000, -10.000]
bbox_max: [10.000, 10.000, 10.000]
types_seen:
  IFCBUILDINGELEMENTPROXY: 1
